// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nonce should work when __webpack_nonce__ is defined: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<link rel=\\"stylesheet\\" type=\\"text/css\\" nonce=\\"THE_NONCE\\" href=\\"simple.css\\"><script charset=\\"utf-8\\" nonce=\\"THE_NONCE\\" src=\\"simple.bundle.js\\"></script></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`nonce should work when __webpack_nonce__ is defined: errors 1`] = `Array []`;

exports[`nonce should work when __webpack_nonce__ is defined: warnings 1`] = `Array []`;

exports[`nonce should work when __webpack_nonce__ is not defined: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"simple.css\\"><script charset=\\"utf-8\\" src=\\"simple.bundle.js\\"></script></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`nonce should work when __webpack_nonce__ is not defined: errors 1`] = `Array []`;

exports[`nonce should work when __webpack_nonce__ is not defined: warnings 1`] = `Array []`;
